--- a/public/welcome.html
+++ b/public/welcome.html
@@ -39,8 +39,7 @@
         </button>
         <div class="waves-container">
             <svg viewBox="0 0 500 200" preserveAspectRatio="none">
-                <path id="wavePath" d="M0 100 Q 50 100, 100 100 T 200 100 T 300 100 T 400 100 T 500 100 V200 H0 Z"
-                    />
+                <path id="wavePath" d="M0 100 Q 50 100, 100 100 T 200 100 T 300 100 T 400 100 T 500 100 V200 H0 Z" />
             </svg>
         </div>
     </div>
@@ -87,6 +86,8 @@
     }
 
     function handleFunctionCall(output) {
+        console.log("function name is: ",output?.name)
+        console.log("function_args is:",JSON.parse(output.arguments))
         if (output?.type === "function_call" &&
             output?.name === "get_weather" &&
             output?.call_id) {
@@ -152,29 +153,44 @@
     }
 
     // Message sending functions
-    function sendSessionUpdate() {
-        const sessionUpdateEvent = {
-            "type": "session.update",
-            "session": {
-                "tools": [{
-                    "type": "function",
-                    "name": "get_weather",
-                    "description": "Get the current weather. Works only for Earth",
-                    "parameters": {
-                        "type": "object",
-                        "properties": {
-                            "location": { "type": "string" }
-                        },
-                        "required": ["location"]
-                    }
-                }],
-                "tool_choice": "auto",
-                "modalities": ["audio", "text"]
-                // "modalities": ["text"]
-            }
-        };
-        sendMessage(sessionUpdateEvent);
-    }
+    // function sendSessionUpdate() {
+        
+    //     const sessionUpdateEvent = {
+    //         "type": "session.update",
+    //         "session": {
+    //             "tools": [{
+    //                 "type": "function",
+    //                 "name": "get_weather",
+    //                 "description": "Get the current weather. Works only for Earth",
+    //                 "parameters": {
+    //                     "type": "object",
+    //                     "properties": {
+    //                         "location": { "type": "string" }
+    //                     },
+    //                     "required": ["location"]
+    //                 }
+    //             },
+    //             {
+    //                 "type": "function",
+    //                 "name": "update_user_progress",
+    //                 "description": "Always use this tool to updates & store user progress in database during onboarding when specific cataogory is completed",
+    //                 "parameters": {
+    //                     "type": "object",
+    //                     "properties": {
+    //                         "catagory_id": { "type": "string" },
+    //                         "user_response_summary": { "type": "string" }
+    //                     },
+    //                     "required": ["catagory_id", "user_response_summary"]
+    //                 }
+    //             }
+    //             ],
+    //             "tool_choice": "auto",
+    //             "modalities": ["audio", "text"]
+    //             // "modalities": ["text"]
+    //         }
+    //     };
+    //     sendMessage(sessionUpdateEvent);
+    // }
 
     function sendInitialMessage() {
         const conversationMessage = {
@@ -219,7 +235,7 @@
     }
 
     function onDataChannelOpen() {
-        sendSessionUpdate();
+        // sendSessionUpdate();
         sendInitialMessage();
     }
 
@@ -228,8 +244,15 @@
         startButton.disabled = true;
         try {
             updateStatus('Initializing...');
-
-            const tokenResponse = await fetch("https://aef9dd6d-fb52-456e-9e21-f5e2f54be901-00-2e96ef993fwys.kirk.replit.dev/session/");
+            const accessToken = localStorage.getItem('access_token');
+            const tokenResponse = await fetch("https://aef9dd6d-fb52-456e-9e21-f5e2f54be901-00-2e96ef993fwys.kirk.replit.dev/session/", {
+                    method: "GET",
+                    headers: {
+                        "Authorization": `Bearer ${accessToken}`,
+                        "Content-Type": "application/json"
+                    }
+                })
+            
             const data = await tokenResponse.json();
             const EPHEMERAL_KEY = data.client_secret.value;
 
@@ -380,25 +403,25 @@
 
 
     function drawWaveMic() {
-    requestAnimationFrame(drawWaveMic);
-    analyserMic.getByteTimeDomainData(dataArrayMic);
+        requestAnimationFrame(drawWaveMic);
+        analyserMic.getByteTimeDomainData(dataArrayMic);
 
-    // Get the peak value from the waveform (instantaneous amplitude)
-    let maxAmplitude = 0;
-    for (let i = 0; i < dataArrayMic.length; i++) {
-        let amplitude = Math.abs(dataArrayMic[i] - 128); // Centered around 128
-        if (amplitude > maxAmplitude) {
-            maxAmplitude = amplitude;
+        // Get the peak value from the waveform (instantaneous amplitude)
+        let maxAmplitude = 0;
+        for (let i = 0; i < dataArrayMic.length; i++) {
+            let amplitude = Math.abs(dataArrayMic[i] - 128); // Centered around 128
+            if (amplitude > maxAmplitude) {
+                maxAmplitude = amplitude;
+            }
+        }
+
+        // Normalize amplitude and set threshold
+        let threshold = 10; // Adjust for sensitivity
+        if (maxAmplitude > threshold) {
+            let scaledSize = Math.min(maxAmplitude * 2, 100); // Scale for visual effect
+            createRipple(window.innerWidth / 2, window.innerHeight / 2.2, scaledSize);
         }
     }
-
-    // Normalize amplitude and set threshold
-    let threshold = 10; // Adjust for sensitivity
-    if (maxAmplitude > threshold) {
-        let scaledSize = Math.min(maxAmplitude * 2, 100); // Scale for visual effect
-        createRipple(window.innerWidth / 2, window.innerHeight / 2.2, scaledSize);
-    }
-}
 
 
 
