--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
   <link rel="stylesheet" href="public/css/index.css">
   <link rel="stylesheet" href="public/css/global.css">
   <!-- add icon link -->
-  <link rel="icon" href="static/logo.png" type="image/x-icon" />
+  <link rel="icon" href="static/logo.svg" type="image/x-icon" />
 </head>
 
 <body>
   <div id="loader-container"></div>
   <div class="login-container" class="animationFadein" style="display:none;">
     <div class="logo">
-      <img src="static/logo.png" alt="Logo">
+      <img src="static/logo.svg" alt="Logo">
     </div>
     <form class="login-form" onsubmit="redirectToWelcome(event)">
       <div class="form-group">
