--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="/static/logo.png" type="image/x-icon" />
+    <link rel="icon" href="/static/logo.svg" type="image/x-icon" />
     <link rel="stylesheet" href="/public/css/dashboard.css">
     <title>Dashboard</title>
 </head>
 <body>
-    <h1>Dashboard</h1>
+    <h1>Welcome to Awakening App</h1>
+    
 </body>
 </html>
