--- a/public/loader.html
+++ b/public/loader.html
@@ -60,7 +60,7 @@
 
 <body>
     <div class="loader-container">
-        <img src="/static/logo.png" alt="Loader Logo" class="loader-logo">
+        <img src="/static/logo.svg" alt="Loader Logo" class="loader-logo">
         <div class="loader-text">The answers lie within you</div>
     </div>
 
