--- a/public/welcome.html
+++ b/public/welcome.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/global.css">
     <link rel="stylesheet" href="css/welcome.css">
-    <link rel="icon" href="/static/logo.png" type="image/x-icon" />
+    <link rel="icon" href="/static/logo.svg" type="image/x-icon" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 </head>
@@ -142,11 +142,12 @@
             output?.name === "onboarding_completed" &&
             output?.call_id) {
             console.log("calling onboarding completed..")
-            if (peerConnection) {
-                console.log("closing connection...")
-                peerConnection.close();
-                peerConnection = null;
-            }
+            testingFunction()
+            // if (peerConnection) {
+            //     console.log("closing connection...")
+            //     peerConnection.close();
+            //     peerConnection = null;
+            // }
         }
     }
 
