--- a/public/welcome.html
+++ b/public/welcome.html
@@ -444,7 +444,7 @@
 
                 setupCanvas(canvasMic);
                 drawWaveMic();
-                startRecording('https://httpbin.org/post');
+                // startRecording('https://httpbin.org/post');
             })
             .catch(error => console.error("Microphone access denied:", error));
     }
