--- a/public/welcome.html
+++ b/public/welcome.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome</title>
-    <!-- <link rel="stylesheet" href="css/index.css"> -->
-    <!-- <link rel="stylesheet" href="css/global.css"> -->
+    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/global.css">
     <link rel="stylesheet" href="css/welcome.css">
     <link rel="icon" href="/static/logo.svg" type="image/x-icon" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
@@ -26,12 +26,13 @@
         <div id="error" class="error"></div>
     </div>
     <div id="audioVisualizer" hidden>
-        <div class="sidebar">
+        <!-- <div class="sidebar">
             <button class="logout-button" onclick="logout()">Logout</button>
-        </div>
+        </div> -->
         <div>
             <h1 class="onboarding-heading">Onboarding</h1>
         </div>
+        <!-- <div class="soft-circle"></div> -->
 
         <canvas id="waveform"></canvas>
         <div class="buttonDiv"">
@@ -300,6 +301,7 @@
             console.log('Sent message:', message);
 
             document.getElementById("audioVisualizer").style.display = "block";
+            showAudioVisualizer();
         }
     }
 
@@ -401,8 +403,7 @@
         stopButton.disabled = true;
         updateStatus('');
         document.querySelector(".welcome-container").style.display = "flex";
-        document.querySelectorAll(".ripple-dot").forEach(dot => dot.remove());
-
+        showWelcomeScreen()
         hideError();
         stopRecordingFile();
     }
@@ -458,69 +459,23 @@
 
     let ripples = [];
 
-function createRipple(x, y, size) {
-    let ripple = document.createElement("div");
-    ripple.classList.add("ripple");
+    function createRipple(x, y, size) {
+        let ripple = document.createElement("div");
+        ripple.classList.add("ripple");
+        document.body.appendChild(ripple);
 
-    let dot = document.createElement("div");
-    dot.classList.add("ripple-dot");
+        ripple.style.left = `${x}px`;
+        ripple.style.top = `${y}px`;
+        ripple.style.width = `${size}px`;
+        ripple.style.height = `${size}px`;
+        ripple.style.borderWidth = "2px"; // Ring effect
 
-    document.body.appendChild(ripple);
-    document.body.appendChild(dot);
-
-    ripple.style.left = `${x - size / 2}px`;
-    ripple.style.top = `${y - size / 2}px`;
-    ripple.style.width = `${size}px`;
-    ripple.style.height = `${size}px`;
-    ripple.style.borderWidth = "2px";
-
-    let dotSize = 60; // Increased dot size
-    dot.style.width = `${dotSize}px`;
-    dot.style.height = `${dotSize}px`;
-    dot.style.left = `${x - dotSize / 2}px`; // Center dot in ring
-    dot.style.top = `${y - dotSize / 2}px`;
-
-    // Remove ripple after animation ends, but keep the dot
-    setTimeout(() => {
-        ripple.style.opacity = "0"; // Fade out ripple
-        setTimeout(() => ripple.remove(), 500);
-    }, 500);
-}
-
-/* Add styles */
-const style = document.createElement("style");
-style.innerHTML = `
-    .ripple {
-        position: absolute;
-        border: 2px solid rgb(144, 164, 137);
-        border-radius: 50%;
-        background: transparent;
-        transform: scale(0);
-        animation: rippleEffect 0.5s ease-out forwards;
-        pointer-events: none;
+        // Remove ripple after animation ends
+        setTimeout(() => {
+            ripple.style.opacity = "0"; // Smooth fade-out
+            setTimeout(() => ripple.remove(), 500); // Ensure removal after fade
+        }, 500);
     }
-
-    .ripple-dot {
-        position: absolute;
-        width: 12px; /* Increased size */
-        height: 12px;
-        background: rgb(144, 164, 137);
-        border-radius: 50%;
-        pointer-events: none;
-    }
-
-    @keyframes rippleEffect {
-        from {
-            transform: scale(0);
-        }
-        to {
-            transform: scale(1.5);
-            opacity: 0;
-        }
-    }
-`;
-document.head.appendChild(style);
-
 
 
 
@@ -541,7 +496,7 @@ document.head.appendChild(style);
         let threshold = 10; // Adjust for sensitivity
         if (maxAmplitude > threshold) {
             let scaledSize = Math.min(maxAmplitude * 2, 100); // Scale for visual effect
-            createRipple(window.innerWidth / 2.1, window.innerHeight / 4.4, scaledSize);
+            createRipple(window.innerWidth / 2.07, window.innerHeight / 4.3, scaledSize);
         }
     }
 
@@ -568,7 +523,8 @@ document.head.appendChild(style);
             attr: { d: pathData },
             duration: 0.08,
             ease: "power2.out",
-            fill: "#90a489"
+            fill: "#90a489",
+            opacity: 0.7
         });
     }
 
@@ -625,7 +581,7 @@ document.head.appendChild(style);
     function setupCanvas() {
         const container = document.getElementById("audioVisualizer");
         container.style.display = "block"; // Ensure it's visible
-
+        showAudioVisualizer();
         // setTimeout(() => {
         //     canvas.width = canvas.clientWidth || 800;
         //     canvas.height = canvas.clientHeight || 300;
