wavelength color added top-line changes

--- a/public/welcome.html
+++ b/public/welcome.html
@@ -16,8 +16,14 @@
 </head>
 
 <body>
+      
     <div id="loader-container"></div>
-    <div class="welcome-container" style="display:none;">
+    <!-- New line and text at the top -->
+    <div class="top-line" style="display: none;">
+        <span>Just click here for <a onclick="init(this)">OnBoarding</a></span>
+    </div>
+    <div class="welcome-container" style="display: none;">
+
         <!-- <h1 class="onboarding-heading">Onboarding</h1> -->
         <div class="onboarding-subtext" id="welcome-text"></div>
         <div class="onboarding-instruction"></div>
