top-line color change

--- a/public/welcome.html
+++ b/public/welcome.html
@@ -20,7 +20,7 @@
     <div id="loader-container"></div>
     <!-- New line and text at the top -->
     <div class="top-line" style="display: none;">
-        <span>Just click here for <a onclick="init(this)">OnBoarding</a></span>
+        <span>Continue <a onclick="init(this)">OnBoarding</a> for more visualization</span>
     </div>
     <div class="welcome-container" style="display: none;">
 
