logout logic test

--- a/public/welcome.html
+++ b/public/welcome.html
@@ -33,6 +33,7 @@
         <div class="container">
             <button id="start_affirmation" class="btn" onclick="init(this); userclicked(this)">Start Affirmation</button>
             <button id="start_conversation" class="btn" onclick="init(this); userclicked(this)">Start Conversation</button>
+            <!-- <button id="" class="btn" onclick="logout()">logout</button> -->
             <select class="dropdown">
                 <option value="1">Alloy</option>
                 <option value="2">My Voice</option>
